[tool.poetry]
name = "cortex-xdr-client"
packages= [
    { include = "cortex_xdr_client", from="." },
]
version = "1.5.2"
description = "API client for Cortex XDR Prevent"
authors = ["ebarti <me@eloibarti.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/ebarti/cortex-xdr-client"
repository = "https://github.com/ebarti/cortex-xdr-client"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
requests-mock = "^1.9.3"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
Sphinx = "5.0.2"
sphinx-autodoc-typehints = "1.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"