[tool.poetry]
name = "cortex-xdr-client"
packages= [
    { include = "cortex_xdr_client", from="." },
]
version = "v1.8.6"
description = "API client for Cortex XDR Prevent"
authors = ["ebarti"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/ebarti/cortex-xdr-client"
repository = "https://github.com/ebarti/cortex-xdr-client"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
requests-mock = "^1.9.3"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
